--- a/public/www/css/common.css
+++ b/public/www/css/common.css
@@ -20,3 +20,15 @@ body {
   font-weight: 400;
   font-optical-sizing: auto;
 }
+.wrap {
+  position: relative;
+  padding-top: 70px;
+}
+.inner {
+  width: calc(100% - 30px);
+  max-width: 1170px;
+  display: flex;
+  align-items: center;
+  justify-content: space-between;
+  margin: 0 auto;
+}
