--- a/public/www/css/common.css
+++ b/public/www/css/common.css
@@ -23,6 +23,7 @@ body {
 .wrap {
   position: relative;
   padding-top: 70px;
+  background: #F7F7F7;
 }
 .inner {
   width: calc(100% - 30px);
@@ -31,4 +32,5 @@ body {
   align-items: center;
   justify-content: space-between;
   margin: 0 auto;
+
 }
