--- a/public/www/css/header.css
+++ b/public/www/css/header.css
@@ -110,6 +110,10 @@
   border-radius: 5px;
   margin-bottom: 40px;
 }
+.mb-login-bt li {
+  display: flex;
+  gap: 3px;
+}
 .mb-login-bt li a {
   font-size: 13px;
 }
@@ -124,9 +128,26 @@
   margin-bottom: 40px;
 }
 .mb-list li {
+  display: flex;
+  gap: 12px;
+  align-items: center;
+  margin: 12px 0;
 }
 .mb-list li a {
   font-size: 16px;
+  font-weight: 700;
 }
 .mb-info {
+  display: flex;
+  /* justify-content: space-between; */
+  flex-direction: column;
+}
+.mb-info-top {
+  display: flex;
+  justify-content: space-between;
+}
+.mb-info-bottom {
+  /* display: flex;
+  justify-content: space-between;
+  align-items: center; */
 }
