--- a/public/www/css/header.css
+++ b/public/www/css/header.css
@@ -125,7 +125,7 @@
   flex-direction: column;
   align-items: flex-start;
   gap: 8px;
-  margin-bottom: 40px;
+  margin-bottom: 20px;
 }
 .mb-list li {
   display: flex;
@@ -139,15 +139,17 @@
 }
 .mb-info {
   display: flex;
-  /* justify-content: space-between; */
+  flex-direction: row;
+  /* justify-content: flex-start; */
+  justify-content: space-around;
+  /* gap: 50px; */
+}
+.mb-info-top,
+.mb-info-bottom {
+  display: flex;
   flex-direction: column;
 }
-.mb-info-top {
-  display: flex;
-  justify-content: space-between;
-}
-.mb-info-bottom {
-  /* display: flex;
-  justify-content: space-between;
-  align-items: center; */
+.mb-info li a {
+  padding: 5px 0;
+  font-size: 14px;
 }
