--- a/public/www/css/maincard.css
+++ b/public/www/css/maincard.css
@@ -2,9 +2,13 @@
   display: block;
 }
 
+.main-card-top {
+  filter: drop-shadow(0 10px 10px rgba(125, 125, 125, 0.2));
+}
+
 /* 카드 상단 */
 .card-slide {
-  width: 390px;
+  width: 360px;
   height: 250px;
   background: #ffe800;
   padding: 34px 26px 29px;
@@ -12,29 +16,67 @@
 }
 
 .money-img {
-  background: url(../images/img_choonsik_231226.png);
+  width: 105px;
+  height: 133px;
+  background: url(../images/img_choonsik_231226.png) no-repeat center;
+  background-size: cover;
+
+  background-position: right center;
+  position: absolute;
 }
+
 .money-title {
+  line-height: 1.5;
   font-size: 20px;
   font-weight: 700;
   color: #202020;
 }
 .money-date {
+  padding: 12px 0 0 0;
   font-size: 13px;
   color: rgba(0, 0, 0, 0.5);
 }
-.money-total {
-}
-.money-
 
+.money-total {
+  height: 60px;
+  background: #ffffff;
+  display: flex;
+  align-items: center;
+  justify-content: space-between;
+  padding: 0 20px;
+  margin-top: 41px;
+}
+.money-total-title {
+  display: flex;
+}
+
+.money-total-icon {
+  width: 18px;
+  height: 18px;
+  margin-right: 8px;
+  background: url(../images/ico_won.png) no-repeat center;
+  background-size: cover;
+}
+
+.money-total h4 {
+  font-size: 16px;
+  font-weight: 700;
+  color: #444444;
+}
+.money-total p {
+  font-size: 18px;
+  font-weight: 700;
+  color: #202020;
+}
 
 /* 카드 하단 후기 슬라이드 */
 .card-review {
-  width: 390px;
+  width: 360px;
   height: 281px;
   background: #ffffff;
   padding: 31px 26px 46px;
   border-radius: 0 0 12px 12px;
+  margin-bottom: 30px;
 }
 
 .review-top {
@@ -56,4 +98,38 @@
   padding-top: 11px;
   max-height: 135px;
   line-height: 1.92;
+}
+
+/* 우측 작은 배너 */
+
+.small-banner {
+  width: 360px;
+  height: 204px;
+  background: #1e2266;
+  padding: 34px 26px 29px;
+  border-radius: 12px;
+  margin-bottom: 30px;
+  filter: drop-shadow(0 10px 10px rgba(125, 125, 125, 0.2));
+}
+.small-banner-img {
+  background: url(../images/dd717ba0105d480bb5c374e411c56abd.png) no-repeat center;
+  background-size: cover;
+  position: absolute;
+}
+.small-banner-content {
+  height: 156px;
+}
+.small-banner-content h2 {
+  font-size: 20px;
+  font-weight: 600;
+  line-height: 1.5;
+  color: #ffffff;
+}
+.small-banner-content p {
+  padding-top: 10px;
+  font-size: 14px;
+  font-weight: 400;
+  line-height: 1.15;
+  opacity: 0.8;
+  color: #ffffff;
 }
