--- a/public/www/css/common.css
+++ b/public/www/css/common.css
@@ -19,6 +19,7 @@ body {
   font-style: normal;
   font-weight: 400;
   font-optical-sizing: auto;
+  /* overflow-x: hidden; */
 }
 .wrap {
   position: relative;
