--- a/public/www/css/main.css
+++ b/public/www/css/main.css
@@ -6,3 +6,12 @@
   /* width: 1120px; */
   margin-top: 30px;
 }
+.main-wrap {
+}
+.main-contain-inner {
+  display: flex;
+  justify-content: space-between;
+  gap: 60px;
+}
+.main-card-inner {
+}
