--- a/public/www/css/header.css
+++ b/public/www/css/header.css
@@ -6,7 +6,10 @@
   left: 0;
   width: 100%;
   height: 70px;
-  display: block;
+  /* display: block; */
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
   border-bottom: 1px solid rgb(238, 238, 238);
 
   z-index: 999990;
@@ -17,13 +20,14 @@
 }
 
 /* 반응형 */
-/* @media all and (max-width: 1120px) {
-  .header .inner {
-    justify-content: center;
+@media all and (max-width: 770px) {
+  .header {
+    height: 100px;
+    justify-content: space-between;
+    flex-direction: column;
     align-items: center;
-    width: 1120px;
   }
-} */
+}
 
 .header-logo {
 }
@@ -54,6 +58,21 @@
     display: flex;
     justify-content: center;
     width: 1120px;
+  }
+}
+
+/* 반응형 */
+@media all and (max-width: 770px) {
+  .header-logo {
+    position: absolute;
+    left: 50%;
+    transform: translateX(-50%);
+  }
+  .header-menu {
+    margin-top: 100px;
+    font-size: 14px;
+    font-weight: 400;
+    /* width: 100%; */
   }
 }
 
