우측 카드 영역과 하단 작업 중

--- a/public/www/css/footer.css
+++ b/public/www/css/footer.css
@@ -93,6 +93,9 @@
   display: inline-block;
   padding: 6px 0;
 }
+.footer-copy-media {
+  display: none;
+}
 
 /* 푸터 반응형 */
 @media all and (max-width: 770px) {
@@ -107,15 +110,32 @@
     flex-direction: column;
     align-items: center;
   }
+  .footer-top-info-desc {
+    padding: 10px 0 16px;
+  }
   .footer-logo {
   }
   .footer-sitemap {
+    border-top: 1px solid rgb(238, 238, 238);
+    gap: 16px;
   }
+  .footer-copy {
+    display: none;
+  }
+
   .footer-sns {
     display: flex;
     flex-direction: column;
     align-items: center;
   }
   .sns-list {
+    display: block;
+  }
+  .footer-copy-media {
+    display: block;
+    font-size: 12px;
+    line-height: 1.67;
+    letter-spacing: -0.1px;
+    list-style: none;
   }
 }
