--- a/public/www/css/maincard.css
+++ b/public/www/css/maincard.css
@@ -145,35 +145,65 @@
   padding: 30px 26px;
   border-radius: 12px;
   background: #ffffff;
+  filter: drop-shadow(0 10px 10px rgba(125, 125, 125, 0.2));
 }
 .weather-title {
   color: #202020;
   font-size: 20px;
   font-weight: 700;
+  margin-bottom: 19px;
 }
 
-.weather-list ul {
-  height: 60px;
-}
-.weather-list {
+.weather-list li {
   display: flex;
   align-items: center;
+  background: #f5f5f4;
+  height: 60px;
+  border-radius: 6px;
+}
+.weather-list {
+  display: block;
+  align-items: center;
+}
+.weather-list ul {
+  display: flex;
+  flex-direction: column;
+
+  gap: 12px;
 }
 .weather-list img {
+  display: block;
+  object-fit: cover;
   width: 60px;
   height: 60px;
   border-radius: 6px;
 }
 .weather-content {
+  display: block;
   padding: 0 16px;
 }
 .weather-list a {
   display: block;
+  font-size: 15px;
   color: #444444;
   font-weight: 700;
+  line-height: 1.73;
 }
 .weather-list span {
   display: block;
+  font-size: 13px;
   color: #888888;
   font-weight: 400;
+}
+
+/* 우측 뉴스 */
+.news {
+  width: 360px;
+  margin-bottom: 30px;
+  padding: 30px 26px;
+  border-radius: 12px;
+  background: #ffffff;
+  filter: drop-shadow(0 10px 10px rgba(125, 125, 125, 0.2));
+}
+.news-title {
 }
