--- a/public/www/css/maincard.css
+++ b/public/www/css/maincard.css
@@ -151,6 +151,7 @@
   color: #202020;
   font-size: 20px;
   font-weight: 700;
+  line-height: 1.61;
   margin-bottom: 19px;
 }
 
@@ -206,4 +207,21 @@
   filter: drop-shadow(0 10px 10px rgba(125, 125, 125, 0.2));
 }
 .news-title {
+  color: #202020;
+  font-size: 20px;
+  font-weight: 700;
+  line-height: 1.61;
+  margin-bottom: 19px;
+}
+
+.news-contents {
+}
+
+.news-contents li {
+}
+
+.news-contents p {
+}
+
+.news-contents img {
 }
