--- a/public/www/css/header.css
+++ b/public/www/css/header.css
@@ -19,16 +19,6 @@
   height: 70px;
 }
 
-/* 반응형 */
-@media all and (max-width: 770px) {
-  .header {
-    height: 100px;
-    justify-content: space-between;
-    flex-direction: column;
-    align-items: center;
-  }
-}
-
 .header-logo {
 }
 .header-logo-link {
@@ -42,38 +32,16 @@
   display: flex;
   gap: 50px;
   align-items: center;
+  justify-content: space-between;
 }
 .menu-list li {
   white-space: nowrap;
+  flex: 1;
 }
 .menu-list li a {
-  font-weight: 700;
   color: #444444;
+  /* font-weight: 700; */
   text-decoration: none;
-}
-
-/* 반응형 */
-@media all and (max-width: 1120px) {
-  .header-menu {
-    display: flex;
-    justify-content: center;
-    width: 1120px;
-  }
-}
-
-/* 반응형 */
-@media all and (max-width: 770px) {
-  .header-logo {
-    position: absolute;
-    left: 50%;
-    transform: translateX(-50%);
-  }
-  .header-menu {
-    margin-top: 100px;
-    font-size: 14px;
-    font-weight: 400;
-    /* width: 100%; */
-  }
 }
 
 .header-navi {
@@ -105,12 +73,83 @@
   background-size: contain;
 }
 
+
 /* 반응형 */
 @media all and (max-width: 1120px) {
+  .header-menu {
+    display: flex;
+    justify-content: center;
+    width: 1120px;
+  }
   .header-navi {
     display: none;
   }
 }
+
+/* 반응형 */
+@media all and (max-width: 770px) {
+  .header {
+    height: 90px;
+    justify-content: space-between;
+    flex-direction: column;
+    align-items: center;
+  }
+  .wrap {
+    padding-top: 90px;
+  }
+  .header-logo {
+    position: absolute;
+    top: 20px;
+    left: 50%;
+    transform: translateX(-50%);
+  }
+  /* .header-logo-img{
+    width: 80%;
+    transform-origin: center;
+  } */
+  .header-menu {
+    margin-top: 80px;
+    font-size: 14px;
+  }
+
+  .menu-list li a {
+    font-family: "KakaoBig regular";
+  }
+  .header-navi {
+    display: flex;
+  }
+  .profile{
+    display: none;
+  }
+  .search {
+    position: absolute;
+    right: 20px;
+    top: 20px;
+  }
+
+  .mobile-navi{
+    position: absolute;
+    left: 20px;
+    top: 20px;
+  }
+}
+
+/* @media all and (max-width: 320px) {
+  .header-menu{
+    
+  }
+  .menu-list{
+    display: flex;
+    justify-content: space-between;
+    padding: 0;
+  }
+  .menu-list li {
+    flex-basis: calc(50% - 10px);
+    text-align: center;
+    padding: 10px;
+  }
+} */
+
 
 /* 헤더 모바일 메뉴 */
 .mb-header-bg {
