--- a/public/www/css/mainbanner.css
+++ b/public/www/css/mainbanner.css
@@ -28,7 +28,7 @@
   line-height: 1.67;
   letter-spacing: -0.1px;
   font-size: 12px;
-  font-weight: 400;
+  font-family: "KakaoBig regular";
   color: #888888;
 }
 .main-banner-title {
@@ -41,7 +41,6 @@
   line-height: 1.56;
 
   font-size: 20px;
-  font-weight: 700;
   color: #ffffff;
 }
 .main-banner-content {
@@ -53,7 +52,7 @@
   line-height: 1.56;
 
   font-size: 14px;
-  font-weight: 400;
+  font-family: "KakaoBig regular";
   color: #999999;
   line-height: 23px;
 }
@@ -77,4 +76,5 @@
 .main-banner-action p {
   color: #bb6bff;
   font-size: 13px;
+  font-family: "KakaoBig regular";
 }
