--- a/public/www/css/footer.css
+++ b/public/www/css/footer.css
@@ -102,6 +102,7 @@
 /* 푸터 반응형 */
 @media all and (max-width: 770px) {
   .footer .inner {
+    padding: 27px 20px 29px;
     width: 100%;
     display: flex;
     flex-direction: column;
@@ -117,9 +118,18 @@
   }
   .footer-logo {
   }
+  .footer-bottom {
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+  }
   .footer-sitemap {
     border-top: 1px solid rgb(238, 238, 238);
     gap: 16px;
+  }
+
+  .footer-sitemap a {
+    font-family: "KakaoBig Bold";
   }
   .footer-copy {
     display: none;
@@ -129,13 +139,14 @@
     display: flex;
     flex-direction: column;
     align-items: center;
+    gap: 10px;
   }
   .sns-list {
-    display: block;
   }
   .footer-copy-media {
     display: block;
     font-size: 12px;
+    font-family: "KakaoBig regular";
     line-height: 1.67;
     letter-spacing: -0.1px;
     list-style: none;
