footer 반응형 완료, 우측 카드 진행 중

--- a/public/www/css/maincard.css
+++ b/public/www/css/maincard.css
@@ -231,7 +231,7 @@
 }
 .news-text {
   display: inline-block;
-  position: relative;
+  /* position: relative; */
   vertical-align: top;
   padding: 15px 12px 12px;
 }
