--- a/public/www/css/footer.css
+++ b/public/www/css/footer.css
@@ -117,15 +117,22 @@
     padding: 10px 0 16px;
   }
   .footer-logo {
+    display: contents;
   }
   .footer-bottom {
     display: flex;
+    width: 100%;
     flex-direction: column;
     align-items: center;
+    gap: 16px;
+    padding-top: 10px;
+    border-top: 1px solid rgb(238, 238, 238);
   }
   .footer-sitemap {
-    border-top: 1px solid rgb(238, 238, 238);
     gap: 16px;
+  }
+  .footer-sitemap .dot {
+    margin: 0 7px;
   }
 
   .footer-sitemap a {
