--- a/public/www/css/header.css
+++ b/public/www/css/header.css
@@ -34,18 +34,12 @@
   align-items: center;
   justify-content: space-between;
 }
-.menu-list li {
-  white-space: nowrap;
-  flex: 1;
-}
-.menu-list-home {
-  border-bottom: 2px solid rgb(57, 57, 57);
-  padding: 7px;
-}
+
 .menu-list li a {
   color: #444444;
   /* font-weight: 700; */
   text-decoration: none;
+  white-space: nowrap;
 }
 
 .header-navi {
@@ -114,7 +108,11 @@
     margin-top: 80px;
     font-size: 14px;
   }
-
+  .menu-list{
+    width: 100%;
+    justify-content: space-between;
+    padding: 0 20px;
+  }
   .menu-list li a {
     font-family: "KakaoBig regular";
   }
