--- a/public/www/css/maintop.css
+++ b/public/www/css/maintop.css
@@ -36,7 +36,7 @@
   font-size: 15px;
   font-family: "KakaoBig regular";
 }
-.dona-contain-dec{
+.dona-contain-dec {
   width: 100%;
 }
 .dona-contain-img {
@@ -55,7 +55,7 @@
   font-size: 12px;
   color: #888;
 }
-.progress{
+.progress {
   display: flex;
   border-radius: 99px;
   width: 100%;
@@ -63,7 +63,7 @@
   background: rgb(233, 233, 233);
   margin-top: 20px;
 }
-.progress-bar{
+.progress-bar {
   background: #ff4050;
 }
 /* .dona-bar {
@@ -93,6 +93,14 @@
   border-radius: 10px;
   margin-bottom: 30px;
   filter: drop-shadow(0 10px 10px rgba(125, 125, 125, 0.2));
+}
+.time-contain-count {
+  position: absolute;
+  top: 100px;
+  left: 30px;
+  width: 100%;
+  height: 30px;
+  background: rgb(32, 32, 32);
 }
 .time-contain {
   display: flex;
@@ -200,28 +208,21 @@
   font-size: 14px;
   font-family: "KakaoBig regular";
 }
-/* .tag-bt:visited{
-    background: #202020;
-}
-.tag-bt span:visited{
-    color: white;
-} */
 
 /* 반응형 */
 @media all and (max-width: 770px) {
   .main-top-dona,
   .main-top-dona-time,
   .main-top-dona-tag {
-    width: 100%;
     max-width: 100%;
-    height: 58.33vw;
-    max-height: 720px;
-
-    /* width: 720px;
-    width: 100%;
-    max-width: 100%;
-    height: 58.33vw;
-    max-height: 720px; */
+    width: 92vw;
+    height: 447px;
+  }
+  .dona-title,
+  .dona-sub {
+    overflow: hidden;
+    white-space: nowrap;
+    text-overflow: ellipsis;
   }
   .dona-contain {
     width: 100%;
@@ -229,8 +230,13 @@
     display: flex;
     flex-direction: row;
   }
+  .dona-contain-dec,
+  .dona-tag {
+    overflow: hidden;
+    white-space: nowrap;
+    text-overflow: ellipsis;
+  }
   .dona-dec {
-    display: flex;
     flex-direction: column;
     padding-top: 25px;
   }
