--- a/public/www/css/maintop.css
+++ b/public/www/css/maintop.css
@@ -118,6 +118,7 @@
   height: 30px;
   border-radius: 8px 8px 0 0;
   background: rgb(32, 32, 32);
+  color: #fff;
 }
 .time-contain-text {
   display: flex;
@@ -215,11 +216,18 @@
 /* 반응형 */
 @media all and (max-width: 770px) {
   .main-top-dona,
-  .main-top-dona-time,
   .main-top-dona-tag {
     max-width: 100%;
     width: 92vw;
     height: 447px;
+  }
+
+  .main-top-dona-time {
+    max-width: 100%;
+    width: 92vw;
+    height: 62vh;
+    display: flex;
+    flex-direction: column;
   }
   .dona-title,
   .dona-sub {
@@ -227,6 +235,7 @@
     white-space: nowrap;
     text-overflow: ellipsis;
   }
+
   .dona-contain {
     width: 100%;
     height: 100%;
